--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.1",
     "react-instantsearch-dom": "^6.24.3",
     "react-scripts": "^5.0.1",
+    "request": "^2.88.2",
     "survey-core": "^1.9.29",
     "survey-react-ui": "^1.9.29",
     "web-vitals": "^2.1.4"
